# floppy

./: .gitignore  .todo_config  Cargo.toml  Makefile  README.md  main.sh.x  main.sh.x.c
.todo/: todo.txt
src/: copyfile  gui.rs  main.rs  main.rs~
test/: test.sh
