[package]
name = "floppy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[workspace]

[[bin]]
name = "floppy"
path = "src/main.rs"
                                                                                                                                                                                                                                                                                                                                                                                    
