[package]
name = "meta"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
wry = "0.24"
winit = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]

[[bin]]
name = "meta"
path = "src/main.rs"

[[bin]]
name = "metacopy-gui"
path = "src/gui.rs"
                                                                                                                                                                                                                                                                                                                                                                                    
